react_webviews/src/common/theme/Style.scss
@import './utils.scss';

.configPrimaryColorClass {
  color: var(--primary) !important;
}

.configPrimaryBackgroundColorClass {
  background-color: var(--primary) !important;
}
.secondary-color {
  color: var(--secondary) !important;
}

.ContainerWrapper {
  background-color: #fff;
}
@mixin fadein-animation-base {
  animation: container-animation-fadein ease 0.15s; 
  // animation: container-animation-left-to-right ease 0.2s;
  
  animation-iteration-count: 1; 
  animation-fill-mode: forwards;
}
html,
body,
#root {
  height: 100%;
  background-color: #fff;
  @include fadein-animation-base()
}

/* web-app changes */

html,
body[data-device="web"] #root {
  /* autoprefixer: off */
  height: 100%;
  background: #f3f4f6;
}
.enable-body-touch{
  overflow: auto !important;
  touch-action: auto !important;
  pointer-events: auto !important;
  touch-action: unset !important;
  pointer-events: unset !important;
}

.disable-body-touch{
  overflow: hidden !important;
  touch-action: none !important;
  pointer-events: none !important;
}

button {
  font-family: "Rubik", "Roboto", sans-serif;
}

body.IframeBody #root {
  background: #fff;
}
/* ... */

